# kube-cel

./: CHANGELOG.md  Cargo.toml  README.md  justfile
.github/workflows/: ci.yml
examples/: basic.rs  compiled_schema.rs  timestamp_duration.rs  validate_crd.rs
src/: compilation.rs  dispatch.rs  encoders.rs  escaping.rs  format.rs  ip.rs  lib.rs  lists.rs  named_format.rs  quantity.rs  regex_funcs.rs  semver_funcs.rs  sets.rs  strings.rs  urls.rs  validation.rs  values.rs
tests/: compilation_integration.rs  k8s_conformance.rs  validation_integration.rs  validation_spike.rs
