[package]
name = "kube-cel"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"
description = "Kubernetes CEL extension functions for cel-interpreter"
repository = "https://github.com/doxxx93/kube-cel"
documentation = "https://docs.rs/kube-cel"
keywords = ["kubernetes", "cel", "kube", "validation"]
categories = ["api-bindings"]

[dependencies]
cel = "0.12"
regex = { version = "1", optional = true }
url = { version = "2", optional = true }
ipnet = { version = "2", optional = true }
semver = { version = "1", optional = true }

[lints.rust]
unsafe_code = "forbid"

[features]
default = ["strings", "lists", "sets", "regex_funcs", "urls", "ip", "semver_funcs", "format", "quantity"]
strings = []
lists = []
sets = []
regex_funcs = ["dep:regex"]
urls = ["dep:url"]
ip = ["dep:ipnet"]
semver_funcs = ["dep:semver"]
format = []
quantity = []
